--- a/index.html
+++ b/index.html
@@ -38,98 +38,98 @@
     
     <section>
 
-<div class="container-fluid">
-    <div class="container-carousel-grande">
-        <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
-        <div class="carousel-inner">
-            <div class="carousel-item active">
-                <img src="sitio-1/assets/imagenes/ciudad.png" class="d-block w-100" alt="...">
+        <div class="container-fluid">
+            <div class="container-carousel-grande">
+                <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+                <div class="carousel-inner">
+                    <div class="carousel-item active">
+                        <img src="sitio-1/assets/imagenes/ciudad.png" class="d-block w-100" alt="...">
+                        </div>
+                        <div class="carousel-item">
+                        <img src="sitio-1/assets/imagenes/encuentro_2_mundos.png" class="d-block w-100" alt="...">
+                        </div>
+                        <div class="carousel-item">
+                        <img src="sitio-1/assets/imagenes/turismo.png" class="d-block w-100" alt="...">
+                    </div>
                 </div>
-                <div class="carousel-item">
-                <img src="sitio-1/assets/imagenes/encuentro_2_mundos.png" class="d-block w-100" alt="...">
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Previous</span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Next</span>
+                </button>
                 </div>
-                <div class="carousel-item">
-                <img src="sitio-1/assets/imagenes/turismo.png" class="d-block w-100" alt="...">
             </div>
         </div>
-        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Previous</span>
-        </button>
-        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Next</span>
-        </button>
-        </div>
-    </div>
-</div>
 
 
     </section>
 
     <section>
 <!--Tarjetas1-->
-<div class="container-tarjetas">
-    <div class="tarjeta">
-        <img src="sitio-1/assets/imagenes/economia.png" alt="camino de baobabs">
-        <h4>Economía</h4>
-        <p>Las riquezas de Quatu.</p>
-        <a href="sitio-1/pagina_cuerpo_econom.html">Leer más</a>
-    </div>
-    <div class="tarjeta">
-        <img src="sitio-1/assets/imagenes/turismo.png" alt="feria costumbrista">
-        <h4>Turismo</h4>
-        <p>Espacios que visitar.</p>
-        <a href="sitio-1/pagina_advertencia.html">Leer más</a>
-    </div>
-    <div class="tarjeta">
-        <img src="sitio-1/assets/imagenes/historia.png" alt="templo ceremonial">
-        <h4>Historia</h4>
-        <p>Hace cientos de años alguien sobre un varali.</p>
-        <a href="sitio-1/pagina_advertencia.html">Leer más</a>
-    </div>
-</div>
+        <div class="container-tarjetas">
+            <div class="tarjeta">
+                <img src="sitio-1/assets/imagenes/economia.png" alt="camino de baobabs">
+                <h4>Economía</h4>
+                <p>Las riquezas de Quatu.</p>
+                <a href="sitio-1/pagina_cuerpo_econom.html">Leer más</a>
+            </div>
+            <div class="tarjeta">
+                <img src="sitio-1/assets/imagenes/turismo.png" alt="feria costumbrista">
+                <h4>Turismo</h4>
+                <p>Espacios que visitar.</p>
+                <a href="sitio-1/pagina_advertencia.html">Leer más</a>
+            </div>
+            <div class="tarjeta">
+                <img src="sitio-1/assets/imagenes/historia.png" alt="templo ceremonial">
+                <h4>Historia</h4>
+                <p>Hace cientos de años alguien sobre un varali.</p>
+                <a href="sitio-1/pagina_advertencia.html">Leer más</a>
+            </div>
+        </div>
     </section>
 
     <section>
 <!--Letrero1-->
-<div class="container-banner">
-    <div class="container-banner1">
-        <img src="" class="banner1">           
-    </div>
-</div>
+        <div class="container-banner">
+            <div class="container-banner1">
+                <img src="" class="banner1">           
+            </div>
+        </div>
     </section>
 
     <section>
 <!--Tarjetas.2-->
-<div class="container">
-    <div class="container-tarjetas">
-        <div class="tarjeta">
-            <img src="sitio-1/assets/imagenes/fiesta_muertos.png" alt="fiesta de los muertos">
-            <h4>Historia Reciente</h4>
-            <p>Como la cuatuanidad se inserta en el mundo globalizado.</p>
-            <a href="#">Leer más</a>
+        <div class="container">
+            <div class="container-tarjetas">
+                <div class="tarjeta">
+                    <img src="sitio-1/assets/imagenes/fiesta_muertos.png" alt="fiesta de los muertos">
+                    <h4>Historia Reciente</h4>
+                    <p>Como la cuatuanidad se inserta en el mundo globalizado.</p>
+                    <a href="#">Leer más</a>
+                </div>
+                <div class="tarjeta">
+                    <img src="sitio-1/assets/imagenes/san_Joao.png" alt="pasacalles de San Joao"> 
+                    <h4>Cultura</h4>
+                    <p>El Hacer.</p>
+                    <a href="#">Leer más</a>
+                </div>
+                <div class="tarjeta">
+                    <img src="sitio-1/assets/imagenes/casa.png" alt="casa tradicioal de altura"> framework/
+                    <h4>Arquitectura</h4>
+                    <p>Casco histórico, patrimonio nacional.</p>
+                    <a href="#">Leer más</a>
+                </div>
+            </div>       
         </div>
-        <div class="tarjeta">
-            <img src="sitio-1/assets/imagenes/san_Joao.png" alt="pasacalles de San Joao"> 
-            <h4>Cultura</h4>
-            <p>El Hacer.</p>
-            <a href="#">Leer más</a>
-        </div>
-        <div class="tarjeta">
-            <img src="sitio-1/assets/imagenes/casa.png" alt="casa tradicioal de altura"> framework/
-            <h4>Arquitectura</h4>
-            <p>Casco histórico, patrimonio nacional.</p>
-            <a href="#">Leer más</a>
-        </div>
-    </div>       
-</div>
    </section>
 
 
 <footer>
         <div class="container-footer">
-            <p>República de Quatu-Comisión de Promoción del Archipiélago de la República de Quatu para el Turismo |<a id="corporacion" href="framework/pagina_advertencia.html" target="_blank"> Comisión de Turismo de la República de Quatu</a></p>
+            <p>República de Quatu-Comisión de Promoción del Archipiélago de la República de Quatu para el Turismo |<a id="corporacion" href="sitio-2/index_2.html" target="_blank"> Comisión de Turismo de la República de Quatu</a></p>
             
         </div>  
 </footer>
