--- a/sitio-1/pagina_cuerpo_econom.html
+++ b/sitio-1/pagina_cuerpo_econom.html
@@ -33,38 +33,39 @@
             </li>
           </ul>
         </div>
-    </header>
+  </header>
 
-<section class="container-contenido">
+  <section class="container-contenido">
   
 
 		<div class="container-imagenes">
-			<img src="sitio-1/assets/imagenes/acueducto.jpg" alt="acueducto">
-      <img src="sitio-2/assets/imagenes/alfareras.png" alt="alfareras">
+			<img src="assets/imagenes/acueducto.jpg" alt="acueducto">
+      <img src="assets/imagenes/alfareras.png" alt="alfareras">
 		</div>
 
 		<div class="container-texto">
       <h2>
         Economía
       </h2>
-			<p>La minería, la industría del reciclaje y el turismo son las joyas de Quatu.</p>
-            <p>La minería,Que a acompañado históricamente a la isla, la fuente de sus imponenetes estructuras, Quatu es uno de los principales exportadores de aluminio e hierro en vecindad próxima.</p>
-            <p>Con socios principales entre Africa, Estados Unidos entre otros.</p>
+			  <p>La minería, la industría del reciclaje y el turismo son las joyas de Quatu.</p>
+        <p>La minería,Que a acompañado históricamente a la isla, la fuente de sus imponenetes estructuras, 
+        Quatu es uno de los principales exportadores de aluminio e hierro en vecindad próxima.</p>
+        <p>Con socios principales entre Africa, Estados Unidos entre otros.</p>
       <h2>
           Inversiones Off-Shore.
       </h2>
-            <p> Miles de sociedades vienen a cerrar tratos aquí, El archipielago es un paraíso fiscal, cuyas ganancias son reinvertidas en la industría del reciclaje.
-                Quatu lleva exportando su modelo sustentable desde principios de los 2000 en el: </p>
-                <p> de Bio Materiales, Que la hace unos de lps principales centros de pasantía 
-            de comunidades científicas que forman parte del equipo que hace de este laboratorio un espacio de progreso a los cuatuanos
-        y a todos lo demás.</p>
-
+          <p> Miles de sociedades vienen a cerrar tratos aquí, El archipielago es un paraíso fiscal, cuyas ganancias son reinvertidas en la industría del reciclaje.
+          Quatu lleva exportando su modelo sustentable desde principios de los 2000 en el: </p>
+          <p> de Bio Materiales, Que la hace unos de lps principales centros de pasantía 
+          de comunidades científicas que forman parte del equipo que hace de este laboratorio un espacio de progreso a los cuatuanos
+          y a todos lo demás.</p>
+    </div>
 
   </section>
 
   <footer>
-    <div class="container-footer">
-        <p>República de Quatu-Comisión de Promoción del Archipiélago de la República de Quatu para el Turismo  <a id="corporacion" href="" target="_blank">Comisión de Turismo de la República de Quatu</a></p>
-        </div>  
-</footer>
+      <div class="container-footer">
+        <p>República de Quatu-Comisión de Promoción del Archipiélago de la República de Quatu para el Turismo |<a id="corporacion" href="sitio-2/index_2.html" target="_blank"> Comisión de Turismo de la República de Quatu</a></p>
+      </div>  
+  </footer>
 </body>
