--- a/sitio-1/pagina_cuerpo_index.html
+++ b/sitio-1/pagina_cuerpo_index.html
@@ -35,68 +35,62 @@
         </div>
     </header>
 
-<section class="container-contenido">
-  
+    <section class="container-contenido">
+    
 
-		<div class="container-imagenes">
-			<img src="../framework/assets/imagenes/acueducto.jpg" alt="acueducto">
-      <img src="../framework/assets/imagenes/alfareras.png" alt="alfareras">
-      <img src="../framework/assets/imagenes/baobab.png" alt="baobab">
-		</div>
+      <div class="container-imagenes">
+        <img src="../framework/assets/imagenes/acueducto.jpg" alt="acueducto">
+        <img src="../framework/assets/imagenes/alfareras.png" alt="alfareras">
+        <img src="../framework/assets/imagenes/baobab.png" alt="baobab">
+      </div>
 
-		<div class="container-texto">
-      <h2>
-        Islas Quatu
-      </h2>
-			<p>
-        Islas Quatu, (malgache: Nosy Quatu, portugués: Ilhas Quatu), oficialmente República de Quatu, es un archipiélago ubicado en el océano Índico, al sureste de la isla Inkoralis.  Está comprendido por un conjunto nuestras cuatro islas mayores llamadas: Eremo, al suroeste; Ionaka al centro; Videns al noroeste y Sira al sur; también se encuentra un pequeño conjunto de islas al este, conocidas como Tampon-Dranomasina. 
-        Con centro neurálgico en la Ciudad de Videns, la capital. Al igual que Madagascar. Contamos con diversidad de flora y fauna endémica, destacándose aves no voladoras de gran tamaño conocidas como varali y oulba, que fueron tempranamente domesticadas por los pueblos originarios del archipiélago, quienes son conocidos por usar aves como animales de tiraje. El nombre de la isla proviene del latín quattuor, que significa cuatro. 
-        los quatuanos (cuatuanos) estamps deseosos de que nos visites y explores la música de Cibomato, las ruinas de Videns, las playas de Sira y los bosques de Ionaka.</p>
+      <div class="container-texto">
+        <h2>
+          Islas Quatu
+        </h2>
+          <p>Islas Quatu, (malgache: Nosy Quatu, portugués: Ilhas Quatu), oficialmente República de Quatu, es un archipiélago ubicado en el océano Índico, al sureste de la isla Inkoralis.  Está comprendido por un conjunto nuestras cuatro islas mayores llamadas: Eremo, al suroeste; Ionaka al centro; Videns al noroeste y Sira al sur; también se encuentra un pequeño conjunto de islas al este, conocidas como Tampon-Dranomasina. 
+            Con centro neurálgico en la Ciudad de Videns, la capital. Al igual que Madagascar. Contamos con diversidad de flora y fauna endémica, destacándose aves no voladoras de gran tamaño conocidas como varali y oulba, que fueron tempranamente domesticadas por los pueblos originarios del archipiélago, quienes son conocidos por usar aves como animales de tiraje. El nombre de la isla proviene del latín quattuor, que significa cuatro. 
+            los quatuanos (cuatuanos) estamps deseosos de que nos visites y explores la música de Cibomato, las ruinas de Videns, las playas de Sira y los bosques de Ionaka.</p>
 
-      <h2>
+        <h2>
 
 
-<h2>VIDENS</h2>
-<p>
-Es la isla mayor, conformada por altos cordones montañosos y sierras ubicadas en la parte central de la isla, rodeadas de bosque y selva. Su clima permite la existencia de bosques densos que contienen mucha agua y terrenos ricos para el cultivo. 
-Posee yacimientos de hierro, aluminio, basalto y cuarzo. El punto más alto es el monte Mesoandro, siendo el onceavo monte más alto del mundo, de 8070 kilómetros de altura, que se encuentra dentro la cordillera de Maro.
-</p>
+        <h2>VIDENS</h2>
+            <p>
+            Es la isla mayor, conformada por altos cordones montañosos y sierras ubicadas en la parte central de la isla, rodeadas de bosque y selva. Su clima permite la existencia de bosques densos que contienen mucha agua y terrenos ricos para el cultivo. 
+            Posee yacimientos de hierro, aluminio, basalto y cuarzo. El punto más alto es el monte Mesoandro, siendo el onceavo monte más alto del mundo, de 8070 kilómetros de altura, que se encuentra dentro la cordillera de Maro.
+            </p>
 
-<h2>IONAKA</h2>
-<p>
-Es una isla de valles fértiles y canales de agua dulce que proviene de cuencas endorreicas y arreicas.
- Está atravesada por algunos canales, que son entradas de mar de baja profundidad que los habitantes transitan arriba de balsas. Se practica la agricultura, cosechándose vainilla, caña de azúcar, frutas exóticas y arroz.
-</p>
+        <h2>IONAKA</h2>
+            <p>
+            Es una isla de valles fértiles y canales de agua dulce que proviene de cuencas endorreicas y arreicas.
+            Está atravesada por algunos canales, que son entradas de mar de baja profundidad que los habitantes transitan arriba de balsas. Se practica la agricultura, cosechándose vainilla, caña de azúcar, frutas exóticas y arroz.
+            </p>
 
-<h2>SIRA</h2>
-<p>
-La isla es una meseta alta, con algunas cadenas montañosas bajas, como el cordón Sirano. Al oeste se encuentra el salar de Sira, y las lagunas de sal de Vira.
- Al centro de la isla se encuentra el campo dunar de Barasi, que ocupa un tercio del tamaño total de la isla. Hacia la costa este de la isla se encuentran los acantilados de Erebii, 
- de gran riqueza biológica.En las cuencas endorreicas y salares donde habitan auquénidos, aves cactáceas y suculentas. De aquí son autóctonos los varali y los oulba.
-</p>
+        <h2>SIRA</h2>
+            <p>
+            La isla es una meseta alta, con algunas cadenas montañosas bajas, como el cordón Sirano. Al oeste se encuentra el salar de Sira, y las lagunas de sal de Vira.
+            Al centro de la isla se encuentra el campo dunar de Barasi, que ocupa un tercio del tamaño total de la isla. Hacia la costa este de la isla se encuentran los acantilados de Erebii, 
+            de gran riqueza biológica.En las cuencas endorreicas y salares donde habitan auquénidos, aves cactáceas y suculentas. De aquí son autóctonos los varali y los oulba.
+            </p>
 
-<h2>EREMO</h2>
-<p>
-La isla es la segunda más grande del archipiélago y en un principio estuvo absolutamente deshabitada. Es arenosa y rocosa, y no se sabe por qué ningún pueblo la habitó, 
-aunque se encontraron vestigios de que los primeros habitantes del archipiélago cruzaron la isla, muriendo en el trayecto. Posee quebradas donde se encontraron restos humanos de más de 2000 años. 
-La cuenca más profunda es la Laguna de Arena que se encuentra en el suroeste de la isla. Con la llegada de colonos y posteriormente con la expansión de la población en el archipiélago, la isla se convirtió en el vertedero oficial,
- evaluándose su factibilidad al no existir animales y personas que se afectaran por el vertimiento de desechos. Los montes que abovedan llanuras permitió que en ellas se depositara basura, desde mediados de 1800.
-</p>
+        <h2>EREMO</h2>
+            <p>La isla es la segunda más grande del archipiélago y en un principio estuvo absolutamente deshabitada. Es arenosa y rocosa, y no se sabe por qué ningún pueblo la habitó, 
+            aunque se encontraron vestigios de que los primeros habitantes del archipiélago cruzaron la isla, muriendo en el trayecto. Posee quebradas donde se encontraron restos humanos de más de 2000 años. 
+            La cuenca más profunda es la Laguna de Arena que se encuentra en el suroeste de la isla. Con la llegada de colonos y posteriormente con la expansión de la población en el archipiélago, la isla se convirtió en el vertedero oficial,
+            evaluándose su factibilidad al no existir animales y personas que se afectaran por el vertimiento de desechos. Los montes que abovedan llanuras permitió que en ellas se depositara basura, desde mediados de 1800.
+            </p>
 
-<h2>TAMPON-DRANOMASINA</h2>
-<p>
-Son islotes altos medianamente habitados que se encuentran rodeados por arrecifes de coral. Se conocen como Tampon-Dranomasina por los lugareños, ya que son territorios de pocos kilómetros que sobresalen desde el mar a una altura relativa. 
-Algunas poseen escalas antiguas que indican que son habitadas desde hace muchos años.
-</p>
-		</div>
+        <h2>TAMPON-DRANOMASINA</h2>
+            <p>Son islotes altos medianamente habitados que se encuentran rodeados por arrecifes de coral. Se conocen como Tampon-Dranomasina por los lugareños, ya que son territorios de pocos kilómetros que sobresalen desde el mar a una altura relativa. 
+            Algunas poseen escalas antiguas que indican que son habitadas desde hace muchos años.
+            </p>
+      </div>
 
-  </section>
-
+    </section>
   <footer>
     <div class="container-footer">
-        <p>República de Quatu-Comisión de Promoción del Archipiélago de la República de Quatu para el Turismo  <a id="corporacion" href="pagina_advertencia.html" target="_blank">Comisión de Turismo de la República de Quatu</a></p>
-        </div>
-   
-        
-</footer>
+      <p>República de Quatu-Comisión de Promoción del Archipiélago de la República de Quatu para el Turismo |<a id="corporacion" href="sitio-2/index_2.html" target="_blank"> Comisión de Turismo de la República de Quatu</a></p>
+    </div>
+  </footer>
 </body>
