--- a/sitio-1/pagina_cuerpo_libro.html
+++ b/sitio-1/pagina_cuerpo_libro.html
@@ -52,8 +52,8 @@
 </div>
 <footer>
     <div class="container-footer">
-        <p>República de Quatu-Comisión de Promoción del Archipiélago de la República de Quatu para el Turismo | <a id="corporacion" href="pagina_advertencia.html" target="_blank">  Comisión de Turismo de la República de Quatu</a></p>
-        </div>
+      <p>República de Quatu-Comisión de Promoción del Archipiélago de la República de Quatu para el Turismo |<a id="corporacion" href="sitio-2/index_2.html" target="_blank"> Comisión de Turismo de la República de Quatu</a></p>
+    </div>
    
         
 </footer>
