--- a/sitio-2/index_2.html
+++ b/sitio-2/index_2.html
@@ -26,15 +26,18 @@
 <div class="container-tarjetas">
             <div class="tarjeta">
                     <h4>El Tintero de Paola Chicano</h4>
-                    <a href="tintero_paola.html">de una mirada</a>
+                    <a href="tintero_paola.html">de una mirada</a><br>
+                    <a href="https://www.instagram.com/michell.fukuro/">instagram de Michell</a>
             </div>
             <div class="tarjeta">
                     <h4>El Tintero de David Silva</h4>
-                    <a href="tintero_david.html">de una mirada</a>
+                    <a href="tintero_david.html">de una mirada</a><br>
+                    <a href="https://www.instagram.com/davinchosilvabernales/">instagram de David</a>
             </div>
             <div class="tarjeta">
                     <h4>El Tintero de Michell Díaz</h4>
-                    <a href="sitio-1/pagina_advertencia.html">de una mirada</a>
+                    <a href="sitio-1/pagina_advertencia.html">de una mirada</a><br>
+                    <a href="https://www.instagram.com/colormonocromo/">instagram de Paola</a>
             </div>
 </div>
         </section>
