--- a/sitio-1/pagina_advertencia.html
+++ b/sitio-1/pagina_advertencia.html
@@ -33,22 +33,22 @@
             </li>
           </ul>
         </div>
-    </header>
+  </header>
 
-<section class="container-contenido">
+  <section class="container-contenido">
 
-		<div class="container-texto-advertencia">
-      <h2>
-        ¡EEeepa! Página en construcción.
-      </h2>
-			<p>Pronto estarán disponibles los contenidos sobre las distintas aristas de la República de Quatu.</p>
-            <p> Puedes buscar en las librerias "QUATU. observaciones botánicas, naturalistas, y etnográficas"</p>
+        <div class="container-texto-advertencia">
+          <h2>
+            ¡EEeepa! Página en construcción.
+          </h2>
+          <p>Pronto estarán disponibles los contenidos sobre las distintas aristas de la República de Quatu.</p>
+          <p> Puedes buscar en las librerias "QUATU. observaciones botánicas, naturalistas, y etnográficas"</p>
   </section>
 
   <footer>
     <div class="container-footer">
-        <p>República de Quatu-Comisión de Promoción del Archipiélago de la República de Quatu para el Turismo  |  <a id="corporacion" href="pagina_advertencia.html" target="_blank"> Comisión de Turismo de la República de Quatu</a></p>
+      <p>República de Quatu-Comisión de Promoción del Archipiélago de la República de Quatu para el Turismo |<a id="corporacion" href="sitio-2/index_2.html" target="_blank"> Comisión de Turismo de la República de Quatu</a></p>
         </div>  
-</footer>
+  </footer>
 
 </body>
